# gh-research

./: README.md  SKILL.md  pyproject.toml
src/ghr/: __init__.py  cli.py  config.py  constants.py  context.py  models.py
src/ghr/analysis/: __init__.py  activity.py  labels.py  rank.py  text.py
src/ghr/auth/: __init__.py  resolver.py  store.py
src/ghr/cache/: __init__.py  db.py  store.py
src/ghr/commands/: __init__.py  _common.py  auth.py  cache.py  discussions.py  issues.py  repos.py  research.py
src/ghr/github/: __init__.py  backoff.py  client.py  errors.py  ratelimit.py  session.py
src/ghr/output/: __init__.py  envelope.py  render.py  tables.py
tests/cli/: test_cli_issues.py  test_cli_research.py  test_cli_slice.py
tests/unit/: test_activity.py  test_auth_resolver.py  test_backoff.py  test_cache.py  test_client.py  test_config.py  test_context.py  test_envelope.py  test_errors.py  test_labels.py  test_models.py  test_rank.py  test_rank_items.py  test_ratelimit.py  test_render.py  test_session.py  test_text.py
