[project]
name = "gh-research"
version = "0.1.0"
description = "GitHub Issues & Discussions research CLI for AI agents — a deterministic data + analysis engine with JSON output."
readme = "README.md"
authors = [
    { name = "muneebhashone", email = "themuneebh@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "httpx>=0.28.1",
    "platformdirs>=4.9.6",
    "tomli-w>=1.2.0",
    "typer>=0.25.1",
]

[project.scripts]
ghr = "ghr.cli:app"

[project.optional-dependencies]
keyring = [
    "keyring>=25.7.0",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ghr"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# B008: Typer/Click idiomatically use function calls (Option/Argument) as defaults.
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/ghr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.14",
    "vcrpy>=8.1.1",
]
